feat: Add environment variable overrides for runtime configuration
This PR introduces a comprehensive system for overriding runtime constants via environment variables, enabling fine-grained control over execution limits, timeouts, and constraints without code modification.

## Changes

### Core Runtime Configuration System

**New File: `packages/agents-core/src/constants/runtime.ts`**
- Centralized all ~50 runtime constants into a single file
- Added `getEnvNumber()` helper for reading environment variables with fallback to defaults
- All constants now support `AGENTS_*` prefixed environment variable overrides
- Maintains backward compatibility - defaults unchanged

**Categories of configurable constants:**
- Agent Execution Loop (4 constants)
- Sub-Agent Turn Execution (3 constants)
- LLM Generation Timeouts (4 constants)
- Function Tool Sandbox (7 constants)
- MCP Tools (6 constants)
- Delegation & A2A Communication (8 constants)
- Artifact Processing (5 constants)
- Session Management (2 constants)
- Status Updates & Streaming (4 constants)
- Stream Buffers (6 constants)
- API Validation Limits (4 constants)
- Data Components & Conversation History (2 constants)

### Environment Variable Validation

**Updated: `agents-manage-api/src/env.ts`**
- Added Zod schema for 10 validation-related constants
- Validates environment overrides at startup
- Exports `runtimeConfig` object for consumption

**Updated: `agents-run-api/src/env.ts`**
- Added Zod schema for 46 runtime execution constants
- Validates environment overrides at startup
- Exports `runtimeConfig` object for consumption

### Documentation

**New: `agents-docs/content/docs/self-hosting/configure-runtime-limits.mdx`**
- Comprehensive guide on runtime configuration
- Concrete use case: "Long-Running Orchestration Agents"
- Explains configuration hierarchy (API vs environment limits)
- Links to related documentation (stopWhen, environment config)
- Embeds `.env.example` source directly using remark-source-code


--- a/agents-docs/content/docs/self-hosting/aws-ec2.mdx
+++ b/agents-docs/content/docs/self-hosting/aws-ec2.mdx
@@ -131,6 +131,8 @@ INKEEP_AGENTS_MANAGE_UI_USERNAME=admin@example.com
 INKEEP_AGENTS_MANAGE_UI_PASSWORD=adminADMIN!@12
 ```
 
+<Snippet file="self-hosting/runtime-limits-note.mdx" />
+
 Run with Docker:
 ```bash
 docker compose up -d
