--- a/agents-docs/content/docs/self-hosting/docker-local.mdx
+++ b/agents-docs/content/docs/self-hosting/docker-local.mdx
@@ -82,6 +82,8 @@ SIGNOZ_API_KEY=
 # INKEEP_AGENTS_MANAGE_UI_PASSWORD=adminADMIN!@12
 ```
 
+<Snippet file="self-hosting/runtime-limits-note.mdx" />
+
 Run with docker:
 ```bash
 docker compose up -d
