update agent docs

--- a/agents-docs/content/docs/visual-builder/sub-agents.mdx
+++ b/agents-docs/content/docs/visual-builder/sub-agents.mdx
@@ -109,3 +109,15 @@ To create artifact components, see the [Artifact Components](/visual-builder/str
 Add the artifact component to your Sub Agent by clicking on the Sub Agent box in the Agent, then selecting which artifact components you want to add.
 
 When the Sub Agent uses tools or delegates to other Sub Agents, artifacts will be automatically created according to your defined schema, capturing the source and content of each interaction.
+
+## Adding team agents
+
+Team agents are agents that are part of the same project. You can add team agents to your Agent by dragging and dropping the **Team Agent** block from the top left onto the Canvas.
+You can configure custom headers to send on every request to the team agent by clicking on the team agent box and then populating the **Headers** field with your custom headers.
+
+## Adding external agents
+
+External agents let you integrate agents built outside of Inkeep (using other frameworks or platforms) into your Agent.
+You can add an external agent to your Agent by dragging and dropping the **External Agent** block from the top left onto the Canvas.
+
+You can configure custom headers to send on every request to the external agent by clicking on the external agent box and then populating the **Headers** field with your custom headers.
