update env variable things

--- a/agents-docs/content/docs/self-hosting/gcp-compute-engine.mdx
+++ b/agents-docs/content/docs/self-hosting/gcp-compute-engine.mdx
@@ -133,6 +133,7 @@ SIGNOZ_API_KEY=
 # Uncomment and set each of these with (openssl rand -hex 32)
 INKEEP_AGENTS_MANAGE_API_BYPASS_SECRET=
 INKEEP_AGENTS_RUN_API_BYPASS_SECRET=
+INKEEP_AGENTS_JWT_SIGNING_SECRET=
 
 # Uncomment and set these for the Manage UI at http://<vm_external_ip>:3000
 PUBLIC_INKEEP_AGENTS_MANAGE_API_URL=http://<vm_external_ip>:3002
