update environment settings

--- a/agents-docs/content/docs/typescript-sdk/tools/credentials.mdx
+++ b/agents-docs/content/docs/typescript-sdk/tools/credentials.mdx
@@ -211,7 +211,7 @@ export const stripeTool = mcpTool({
   id: 'stripe-tool',
   name: 'Stripe',
   serverUrl: 'https://mcp.stripe.com/mcp',
-  credential: envSettings.getEnvironmentSetting('stripe_api_key'),
+  credential: envSettings.getEnvironmentCredential('stripe_api_key'),
 });
 ```
 
