--- a/agents-docs/content/docs/typescript-sdk/tools/credentials.mdx
+++ b/agents-docs/content/docs/typescript-sdk/tools/credentials.mdx
@@ -56,6 +56,7 @@ import { CredentialStoreType } from "@inkeep/agents-core";
 // Step 1: Create the credential
 const stripeCredential = credential({
   id: 'stripe-credential',
+  name: 'Stripe Credential',
   type: CredentialStoreType.memory, // Memory store
   credentialStoreId: 'memory-default',
   retrievalParams: {
