Add component types

--- a/agents-docs/content/docs/talk-to-your-agents/react/embedded-chat.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/react/embedded-chat.mdx
@@ -84,4 +84,23 @@ pnpm add @inkeep/agents-ui
   </Tab>
 </Tabs>
 
-<Snippet file="ui/CustomizationTip.mdx" />
+## Props
+
+<AutoTypeTable
+  path="./content/docs/talk-to-your-agents/react/types.ts"
+  name="InkeepEmbeddedChatProps"
+/>
+
+### Base Settings
+
+<AutoTypeTable
+  path="./content/docs/talk-to-your-agents/react/types.ts"
+  name="InkeepBaseSettings"
+/>
+
+### AI Chat Settings
+
+<AutoTypeTable
+  path="./content/docs/talk-to-your-agents/react/types.ts"
+  name="InkeepAIChatSettings"
+/>
