--- a/agents-docs/content/docs/talk-to-your-agents/react/chat-button.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/react/chat-button.mdx
@@ -84,5 +84,30 @@ pnpm add @inkeep/agents-ui
   </Tab>
 </Tabs>
 
+## Props
 
-<Snippet file="ui/CustomizationTip.mdx" />
+<AutoTypeTable
+  path="./content/docs/talk-to-your-agents/react/types.ts"
+  name="InkeepChatButtonProps"
+/>
+
+### Base Settings
+
+<AutoTypeTable
+  path="./content/docs/talk-to-your-agents/react/types.ts"
+  name="InkeepBaseSettings"
+/>
+
+### Modal Settings
+
+<AutoTypeTable
+  path="./content/docs/talk-to-your-agents/react/types.ts"
+  name="InkeepModalSettings"
+/>
+
+### AI Chat Settings
+
+<AutoTypeTable
+  path="./content/docs/talk-to-your-agents/react/types.ts"
+  name="InkeepAIChatSettings"
+/>
