credential overhaul done

--- a/agents-docs/content/docs/get-started/push-pull.mdx
+++ b/agents-docs/content/docs/get-started/push-pull.mdx
@@ -10,6 +10,8 @@ With Inkeep, you can define your agents in code, push them to the Visual Builder
 
 Let's walk through the process.
 
+<YouTubeVideo videoId="2-j4LuabeHQ" title="Push code to visual" caption="Visual guide to the usage of inkeep push" />
+
 ### Step 1: Install the Inkeep CLI
 
 ```bash
