--- a/agents-docs/content/docs/typescript-sdk/cli-reference.mdx
+++ b/agents-docs/content/docs/typescript-sdk/cli-reference.mdx
@@ -487,10 +487,10 @@ inkeep add [options]
 inkeep add
 
 # Add a project template
-inkeep add --project event-planner
+inkeep add --project activities-planner
 
 # Add project template to specific path
-inkeep add --project event-planner --target-path ./examples
+inkeep add --project activities-planner --target-path ./examples
 
 # Add an MCP template (auto-detects apps/mcp/app directory)
 inkeep add --mcp zendesk
@@ -499,7 +499,7 @@ inkeep add --mcp zendesk
 inkeep add --mcp zendesk --target-path ./apps/mcp/app
 
 # Using specific config file
-inkeep add --project event-planner --config ./my-config.ts
+inkeep add --project activities-planner --config ./my-config.ts
 ```
 
 **Behavior:**
