--- a/agents-docs/content/docs/talk-to-your-agents/vercel-ai-sdk/use-chat.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/vercel-ai-sdk/use-chat.mdx
@@ -38,8 +38,8 @@ export default function Page() {
       api: "${process.env.NEXT_PUBLIC_INKEEP_AGENTS_RUN_API_URL}/api/chat", // 
       headers: {
         "x-inkeep-tenant-id": "default",
-        "x-inkeep-project-id": "event-planner",
-        "x-inkeep-agent-id": "event-planner",
+        "x-inkeep-project-id": "activities-planner",
+        "x-inkeep-agent-id": "activities-planner",
       },
     }),
   });
@@ -176,8 +176,8 @@ export default function Page() {
       api: "{process.env.NEXT_PUBLIC_INKEEP_AGENTS_RUN_API_URL}/api/chat",
       headers: {
         "x-inkeep-tenant-id": "default",
-        "x-inkeep-project-id": "event-planner",
-        "x-inkeep-agent-id": "event-planner",
+        "x-inkeep-project-id": "activities-planner",
+        "x-inkeep-agent-id": "activities-planner",
         tz: "US/Pacific",
       },
     }),
