removed credentials quick start

--- a/agents-docs/content/docs/get-started/traces.mdx
+++ b/agents-docs/content/docs/get-started/traces.mdx
@@ -199,3 +199,7 @@ For more detailed information on using traces, see the [SigNoz Usage guide](/typ
 ## Additional Observability and Evals
 
 👉 For additional observability or a dedicated Evals platform, you can connect to any OTEL-based provider. For example, check out the [Langfuse Usage guide](/typescript-sdk/langfuse-usage) for end-to-end instructions.
+
+## Next steps
+
+Next, we recommend setting up the Nango credential store for production-ready credential management. See [Credentials](/typescript-sdk/credentials/overview) to get started.
