--- a/agents-docs/content/docs/talk-to-your-agents/react/chat-button.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/react/chat-button.mdx
@@ -1,6 +1,6 @@
 ---
 title: Chat Button
-description: Learn how to use the chat button component
+description: Learn how to use the chat button component in React
 icon: "LuMessageCircle"
 ---
 
@@ -87,27 +87,27 @@ pnpm add @inkeep/agents-ui
 ## Props
 
 <AutoTypeTable
-  path="./content/docs/talk-to-your-agents/react/types.ts"
+  path="./content/docs/talk-to-your-agents/types.ts"
   name="InkeepChatButtonProps"
 />
 
 ### Base Settings
 
 <AutoTypeTable
-  path="./content/docs/talk-to-your-agents/react/types.ts"
+  path="./content/docs/talk-to-your-agents/types.ts"
   name="InkeepBaseSettings"
 />
 
 ### Modal Settings
 
 <AutoTypeTable
-  path="./content/docs/talk-to-your-agents/react/types.ts"
+  path="./content/docs/talk-to-your-agents/types.ts"
   name="InkeepModalSettings"
 />
 
 ### AI Chat Settings
 
 <AutoTypeTable
-  path="./content/docs/talk-to-your-agents/react/types.ts"
+  path="./content/docs/talk-to-your-agents/types.ts"
   name="InkeepAIChatSettings"
 />
