--- a/agents-docs/content/docs/typescript-sdk/credentials/env-aware-credentials.mdx
+++ b/agents-docs/content/docs/typescript-sdk/credentials/env-aware-credentials.mdx
@@ -4,13 +4,15 @@ sidebarTitle: Env-aware Credentials
 icon: "LuLayers"
 ---
 
-Environment-aware credentials are credentials that are stored in the environment variables in your `.env` file. They are referenced in the TypeScript SDK using the `envSettings` object. Creating environment-aware credentials is a two step process:
+Environment-aware credentials enable automatic loading of environment-specific credentials (development, production, etc.) while keeping them cleanly separated and easily switchable via the CLI's --env flag.
 
-### Step 1: Create environment files and register credentials in index file
+Credentials are referenced in the TypeScript SDK using the `envSettings` object. Creating environment-aware credentials is a two step process:
+
+### Step 1: Define environment configurations
 
 <Tabs>
   <Tab title="Development Config">
-    ```typescript title="<your-project-name>/environments/development.env.ts"
+    ```typescript title="projects/my-project/environments/development.env.ts"
     import { registerEnvironmentSettings } from '@inkeep/agents-sdk';
     import { CredentialStoreType } from '@inkeep/agents-core';
 
@@ -19,6 +21,7 @@ Environment-aware credentials are credentials that are stored in the environment
       credentials: {
         'stripe_api_key': {
           id: 'stripe-api-key',
+          name: 'Stripe API Key',
           type: CredentialStoreType.memory,
           credentialStoreId: 'memory-default',
           retrievalParams: {
@@ -31,7 +34,7 @@ Environment-aware credentials are credentials that are stored in the environment
   </Tab>
 
   <Tab title="Production Config">
-    ```typescript title="<your-project-name>/environments/production.env.ts"
+    ```typescript title="projects/my-project/environments/production.env.ts"
     import { registerEnvironmentSettings } from '@inkeep/agents-sdk';
     import { CredentialStoreType } from '@inkeep/agents-core';
 
@@ -40,6 +43,7 @@ Environment-aware credentials are credentials that are stored in the environment
       credentials: {
         'stripe_api_key': {
           id: 'stripe-api-key',
+          name: 'Stripe API Key',
           type: CredentialStoreType.memory,
           credentialStoreId: 'memory-default',
           retrievalParams: {
@@ -52,7 +56,7 @@ Environment-aware credentials are credentials that are stored in the environment
   </Tab>
 
   <Tab title="Index File">
-    ```typescript title="<your-project-name>/environments/index.ts"
+    ```typescript title="projects/my-project/environments/index.ts"
     import { createEnvironmentSettings } from '@inkeep/agents-sdk';
     import { development } from './development.env';
     import { production } from './production.env';
@@ -75,7 +79,7 @@ export const stripeTool = mcpTool({
   id: 'stripe-tool',
   name: 'Stripe',
   serverUrl: 'https://mcp.stripe.com/mcp',
-  credential: envSettings.getEnvironmentSetting('stripe_api_key'),
+  credential: envSettings.getEnvironmentCredential('stripe_api_key'),
 });
 ```
 
