--- a/agents-docs/content/docs/typescript-sdk/credentials/environment-variables.mdx
+++ b/agents-docs/content/docs/typescript-sdk/credentials/environment-variables.mdx
@@ -5,7 +5,7 @@ icon: "LuDatabase"
 
 Environment variables are a simple way to store credentials in your environment. They are stored in the environment variables in your `.env` file.
 
-# Referencing credentials in SDK
+## Referencing credentials in SDK
 
 Here is an example of how to reference a credential in the TypeScript SDK for Bearer Authentication.
 
