--- a/agents-docs/content/docs/typescript-sdk/credentials/keychain.mdx
+++ b/agents-docs/content/docs/typescript-sdk/credentials/keychain.mdx
@@ -9,7 +9,7 @@ Keychain is the default method for storing credentials for every project. It is 
 Keychain lacks automatic token refresh, production suitability, and metadata header support, making Nango the recommended solution for production-ready credential management. See setup instructions for Nango [here](/typescript-sdk/credentials/nango).
 </Warning>
 
-# Referencing credentials in SDK
+## Referencing credentials in SDK
 
 Here is an example of how to reference a credential in the TypeScript SDK for both Bearer Authentication and OAuth2.1/PKCE.
 
