--- a/agents-docs/content/docs/typescript-sdk/credentials/nango.mdx
+++ b/agents-docs/content/docs/typescript-sdk/credentials/nango.mdx
@@ -7,9 +7,7 @@ Nango is an excellent choice for both development and production environments, p
 
 To get started, first set up Nango either through cloud or local deployment, then create your credential, and finally consume the credential through the TypeScript SDK.
 
-# Set Up Nango
-
-## Option 1: Nango Cloud setup
+## Nango setup option 1: Nango Cloud
 
 ### Step 1: Create a Nango account
 
@@ -25,16 +23,17 @@ After creating your Nango account, navigate to Environment Settings in your dash
 NANGO_SECRET_KEY=your_nango_secret_key
 ```
 
-### Step 4: Verify Setup
+Restart your dev server to load the new environment variable:
 
-1. Restart your Inkeep agents:
-   ```bash
-   pnpm dev
-   ```
+```bash
+pnpm dev
+```
 
-2. Create a new credential in the [Visual Builder](/visual-builder/credentials)
+### Step 4: Create a new credential in the Visual Builder using Nango
 
-## Option 2: Nango local setup
+<Video src="/videos/create-nango-credential.mp4" />
+
+## Nango setup option 2: Nango local
 
 ### Step 1: Clone the optional services repository
 
@@ -51,7 +50,12 @@ Inside the `agents-optional-local-dev` repository, run the following command:
 docker-compose --profile nango up -d
 ```
 
-### Step 3: Configure Environment Variables
+### Step 3: Save your Nango secret key
+
+1. Open Nango at `http://localhost:3050`
+2. Navigate to Environment Settings and copy the secret key
+
+### Step 4: Configure your root `.env` file
 
 In your **root project directory** (not inside the `agents-optional-local-dev` repository), update your `.env` file:
 
@@ -61,21 +65,21 @@ NANGO_HOST=http://localhost:3050
 PUBLIC_NANGO_CONNECT_BASE_URL=http://localhost:3051
 ```
 
-To get your Nango secret key:
+Restart your dev server to load the new environment variables:
 
-1. Open Nango at `http://localhost:3050`
-2. Navigate to Environment Settings and copy the secret key
+```bash
+pnpm dev
+```
 
-### Step 4: Verify Setup
+### Step 5: Create a new credential in the Visual Builder using Nango
 
-1. Restart your Inkeep agents:
-   ```bash
-   pnpm dev
-   ```
+Create a new credential in the [Visual Builder](/visual-builder/credentials) using Nango Store as the credential store.
 
-2. Create a new credential in the [Visual Builder](/visual-builder/credentials)
+<Video src="/videos/create-nango-credential.mp4" />
 
-# Referencing credentials in SDK
+## Referencing credentials in SDK
+
+Once you have created a credential in the Visual Builder, you can reference it in the TypeScript SDK for both Bearer Authentication and OAuth2.1/PKCE. 
 
 Here is an example of how to reference a credential in the TypeScript SDK for both Bearer Authentication and OAuth2.1/PKCE.
 
