--- a/agents-docs/content/docs/typescript-sdk/credentials/overview.mdx
+++ b/agents-docs/content/docs/typescript-sdk/credentials/overview.mdx
@@ -5,7 +5,7 @@ icon: "LuSparkles"
 
 ## Choosing a Credential Store
 
-MCP servers may require authentication for secure access. The Inkeep agent framework supports storing these credentials in three different ways:
+MCP servers and external agents may require authentication for secure access. The Inkeep agent framework supports storing these credentials in three different ways:
 
 <Cards>
   <Card title="Nango Store (Recommended)" icon="LuCloud" href="/typescript-sdk/credentials/nango">
