--- a/agents-docs/content/docs/talk-to-your-agents/react/chat-button.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/react/chat-button.mdx
@@ -4,7 +4,7 @@ description: Learn how to use the chat button component in React
 icon: "LuMessageCircle"
 ---
 
-The chat button component is a simple way to trigger the Inkeep modal.
+The chat button component is a simple way to trigger the Inkeep chat bubble.
 
 ## Installation
 
@@ -98,7 +98,7 @@ pnpm add @inkeep/agents-ui
   name="InkeepBaseSettings"
 />
 
-### Modal Settings
+### Open Settings
 
 <AutoTypeTable
   path="./content/docs/talk-to-your-agents/types.ts"
