--- a/agents-docs/content/docs/talk-to-your-agents/javascript/chat-button.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/javascript/chat-button.mdx
@@ -4,7 +4,7 @@ description: Learn how to use the chat button component in JavaScript
 icon: "LuMessageCircle"
 ---
 
-The chat button component is a simple way to trigger the Inkeep modal in your JavaScript application.
+The chat button component is a simple way to trigger the Inkeep chat bubble in your JavaScript application.
 
 ## Quick Start
 
@@ -50,7 +50,7 @@ The chat button component is a simple way to trigger the Inkeep modal in your Ja
   name="InkeepBaseSettings"
 />
 
-### Modal Settings
+### Open Settings
 
 <AutoTypeTable
   path="./content/docs/talk-to-your-agents/types.ts"
